--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ a, h1, h2, h3, ul, html, body, #root {
   
   #root {
     min-height: 100vh;
-    font-family: 'Roboto';
+    font-family: sans-serif;
     box-sizing: border-box;
     background-color: white;
     border-left: #e1e1e1 1px solid;
@@ -48,7 +48,7 @@ a, h1, h2, h3, ul, html, body, #root {
   
   #root > * {
     margin: 2px;
-    background-color: #c9a5e4;
+    background-color: #e9d4f9;
   }
   
   ul {
@@ -68,11 +68,11 @@ a, h1, h2, h3, ul, html, body, #root {
   }
   
   ul li a:hover {
-    color: #6fe6fb;
+    color: #9407f97d;
   }
   
   ul li a.active {
-    color: #d8f3f8;
+    color: #9407f97d;
   }
   
   @media (max-width: 500px) {
@@ -100,4 +100,83 @@ a, h1, h2, h3, ul, html, body, #root {
       margin-left: 15%;
       margin-right: 15%;
     }
+  }
+
+  .tarefa-concluida{
+    text-decoration: line-through;
+    /* padding: 10px;
+    padding-left: 100px; */
+    
+  }
+
+  .titulo-concluidas{
+    padding-left: 100px;
+  }
+
+  /* unir as linhas */
+  table{
+    border-collapse: collapse;
+    /* width: 100%; */
+  }
+
+  /* bordas mais grossas e padding dando espaçamento entre o texto e as linhas*/
+  table td, table th {
+    border: 1px solid black;
+    padding: 5px;
+  }
+
+  .table1{
+    width: 75%;
+    margin-right: 20px;
+  }
+
+  .table2{
+    width: 25%;
+  }
+
+  .div-tarefas{
+    display: flex;
+    width: 100%;
+  }
+
+  button{
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #9407f996;
+    color: white;
+  }
+
+  .button-excluir{
+    margin: 0 10px;
+    margin-left: 20px;
+  }
+
+  .button-cancelar{
+    margin: 0 10px;
+  }
+
+  .button-limpar, .button-cadastros{
+    width: 250px;
+    padding: 7px 0;
+    margin-top: 10px;
+  }
+
+  .button-cadastros{
+    margin: 15px;
+  }
+
+  .div-pai{
+    text-align: center;
+    position: absolute;
+    width:95%;
+    margin-left: 20px;
+    margin-right: 15px;
+  }
+
+  label{
+    width: 150px;
+    display: inline-block;
+    text-align: left;
+    margin-top: 8px;
   }
