--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ a, h1, h2, h3, ul, html, body, #root {
   /* bordas mais grossas e padding dando espaçamento entre o texto e as linhas*/
   table td, table th {
     border: 1px solid black;
-    padding: 5px;
+    padding: 8px;
   }
 
   .table1{
@@ -130,13 +130,19 @@ a, h1, h2, h3, ul, html, body, #root {
     margin-right: 20px;
   }
 
+  .table-equipe{
+    width: 100%;
+  }
+
   .table2{
     width: 25%;
+    margin-right: 30px;
   }
 
   .div-tarefas{
     display: flex;
     width: 100%;
+    margin-top: 10px;
   }
 
   button{
@@ -173,7 +179,7 @@ a, h1, h2, h3, ul, html, body, #root {
   .div-pai{
     text-align: center;
     position: absolute;
-    width:95%;
+    width:100%;
     margin-left: 20px;
     margin-right: 15px;
   }
@@ -188,6 +194,26 @@ a, h1, h2, h3, ul, html, body, #root {
   .select{
     width: 400px;
     margin: 20px auto;
+  }
+
+  .table-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 40vh;  Ajuste a altura de acordo com suas necessidades */
+    margin: 20px 5px
+  }
+  
+  .equipe-table {
+    width: 60%; /* Ajuste a largura de acordo com suas necessidades */
+    border-collapse: collapse;
+  }
+  
+  .equipe-table th,
+  .equipe-table td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
   }
 
 
